--- a/HTML/div.html
+++ b/HTML/div.html
@@ -25,12 +25,12 @@
     </style>
   </head>
   <body>
-    <nav><a href="#section-css">CSS</a>
+    <div><a href="#section-css">CSS</a>
     <img src="Images/Image1.jpeg" alt="veer profile pic" />
     <p class="Username">@_veer_pratapsingh</p>
-    <p>I am a Front-end Developer.</p></nav>
-    <header><h2>HTML</h2>
-    <p>
+    <p>I am a Front-end Developer.</p></div>
+    <h2>HTML</h2>
+    <div><p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis
       officiis qui fugiat illum, et magnam, veritatis debitis hic ab saepe omnis
       minima, consequuntur ratione deleniti sed odio ad repellendus optio. Lorem
@@ -143,9 +143,9 @@
       iusto blanditiis error odit magnam delectus nihil repellat nisi ducimus
       at, reprehenderit debitis mollitia expedita dignissimos perspiciatis
       tempore omnis!
-    </p></header>
+    </p>
     <h2 id="section-css">CSS</h2>
-    <main><p>
+    <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quam
       quisquam, aliquid quod facilis molestiae nesciunt commodi nemo, iure est
       consectetur vel deserunt rerum amet eum sed, tenetur sunt quis aspernatur
@@ -157,8 +157,8 @@
       laborum minima quibusdam voluptates, repellat cupiditate tenetur nam odit.
       Assumenda consequatur possimus fugit, in distinctio amet illum tempora,
       omnis minima eius quae.
-    </p></main>
-    <footer><a href="#">Jump to top</a>
-    <img src="Images/Image1.jpeg" class="image" alt="My image"></footer>
+    </p></div>
+    <a href="#">Jump to top</a>
+    <img src="Images/Image1.jpeg" class="image" alt="My image">
   </body>
 </html>
